syntax = "proto3";

package stats.message.event.request;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message SimilarEventsRequestProto {
  int64 event_id = 1; // идентификатор мероприятия, для которого нужно найти похожие мероприятия;
  int64 user_id = 2; // идентификатор пользователя, для которого из выдачи нужно исключить мероприятия, с которыми он уже взаимодействовал;
  int32 max_results = 3;
}
